# git_home_work

./: main.c
Complex Linux Project/: Makefile  README.md
Complex Linux Project/calculator/: advanced_ops.c  basic_ops.c  calculator.h  fraction_ops.c  main.c
Complex Linux Project/transformer/: lower.c  transform.h  transform_lib.c  upper.c
Docker/: Dockerfile  README.md
Docker/scripts/: client.sh  server.sh
Linux GNU Make /Task1/: Makefile1  Makefile2  Makefile3  main.c  src_1.c  src_2.c  src_3.c
Linux GNU Make /Task2/: Makefile  main.c  make1.mk  make2.mk  make3.mk  src1.c  src2.c  src3.c
my_calculator/: Makefile.am  README.md  add.c  configure.ac  main.c  multiply.c
other_files/: false_header  header  script.sh  source_dir  vim_example_1.txt  vim_example_2.txt
